Flags umgestellt auf zentrale Verwaltung in maxi